# just-dodge

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  ai_coding_agents_research_summary.md  blender_ecosystem_research_2026-07-14.md  cmu_combat_mocap_survey_2026-07-17.md  download_kungfu_athlete_bot.py  formal_methods_research.md
.github/workflows/: adversarial-visual-contract.yml  ci.yml  pvp005-visual.yml  sg02-cross-platform.yml
.hermes/: atomic_archive.md  atomic_ledger.md  atomic_ledger_archive.md  grab07_650mm_closure_ledger.md
.hermes/plans/: 2026-07-06_201500-motionbricks-inference-pipeline.md
ardy_service/: generate.py
assets/: motionbricks_pose_backbone.onnx  motionbricks_root_backbone.onnx  motionbricks_runtime.sha256
docs/: AGENT-OPERABLE-ARCHITECTURE.md  ARCHITECTURE.md  ARMOR-DAMAGE-SYSTEM.md  CHECKLIST.md  COMBAT-SYSTEM.md  ENGINE-SKELETON.md  FILE-INVENTORY-AUDIT.md  GDD.md  JUST_DODGE_ADVERSARIAL_VISUAL_AUDIT.md  LESSONS-FROM-OATHYARD.md  MILESTONES.md  MOTIONBRICKS-RETARGETING.md  PACKAGE_BOUNDARY.md  PHASED-PRODUCTION-PLAN.md  PROTOTYPES.md  QA-AGENTIC-PLAYTESTING.md  RETARGETING-PLAN.md  RISK-REGISTER.md  ROADMAP.md  SYSTEMS-DESIGN.md  TECH-STACK.md
meshy_output/: history.json
motionbricks_service/: README.md  __init__.py  generate.py  interaction_forward.py  requirements.txt
qa_runs/: cmu_clip_selection.md
references/: armor_deformation_frontier_2026-07-20.md
scripts/: acquire_combat_v2m_sources.sh  generate_v2m_combat_clips.py
src/: action_matrix.rs  active_ragdoll.rs  ai.rs  ai_script.rs  armor.rs  articulated_physics.rs  asset.rs  cleanbox.rs  combat.rs  debug.wgsl  dodge_presentation.rs  duel_physics.rs  duel_world.rs  g1_articulation.rs  g1_hinge_adapter.rs  golden_replay.rs  hero_strike.rs  hinge_projection.rs  hitbox.rs  hud.rs  injury.rs  input.rs  lib.rs  m3_cleanbox.rs  main.rs  mannequin.rs  milestone3.rs  motion.rs  motion_frontier_lab.rs  motion_plan.rs  motion_request.rs  motion_retarget.rs  motion_runtime.rs  motion_service.rs  motion_service_async.rs  neural_plan.rs  pvp005_qa.wgsl  renderer.rs  replay.rs  retarget.rs  (+8 more)
tests/: c0_official_motion.rs  m4_motion_service_async.rs  motion_service_integration.rs
tools/: assemble_meshy_c0.py  assemble_meshy_e0.py  assemble_meshy_w0.py  asset_review.py  audit_bones_seed.py  cook_w0_sword.py  create_c0_reference_pose.py  encode_cmu_segments.py  encode_primitives.py  export_backbones.py  export_motionbricks_onnx.py  extract_cmu_segment.py  extract_fbx_mesh.py  extract_fbx_skinned.py  extract_mesh.py  extract_motion_features.py  hydrate_motionbricks_runtime.sh  index_bones_seed_g1.py  kimodo_generate.py  meshy_web_generate.py  meshy_web_har_generate.py  package_release.sh  package_release_windows.sh  requirements.txt  retarget_to_g1.py  retopologize_c0.py  review_server.py  seed_review_server.py  transfer_mpfb_extremity_detail.py  validate_meshy_rig.py  verify_latest_media.py  verify_onnx.py  verify_playable_repo.sh  verify_pvp005_candidate_packet.py  verify_pvp005_revision_baseline.py  verify_release_package.sh  verify_skinned_bin.py
(+624 files in other folders)
