[package]
name = "just-dodge"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "30.0"
glam = { version = "0.28", features = ["bytemuck"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
fbxcel = "0.9"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
postcard = { version = "1.0", features = ["use-std"] }
rand = "0.8"
rand_xoshiro = "0.6"

